[package]
name = "jsonrpc-base"
version = "0.2.0"
authors = ["Victor Lopez <vhrlopes@gmail.com>"]
edition = "2021"
description = "A minimalistic types implementation of the JSON-RPC protocol"
license = "MIT/Apache-2.0"
repository = "https://github.com/vlopes11/jsonrpc-base"
documentation = "https://docs.rs/jsonrpc-base/"
readme = "README.md"
keywords = ["jsonrpc", "json-rpc"]

[dependencies]
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
uuid = { version = "1.3", default-features = false, features = ["v4"], optional = true }

[features]
default = ["std", "uuid"]
std = []
